...
              horizontalArrangement = Arrangement.SpaceBetween) {
                Button(
                    onClick = {
                      newElementType = ScheduledType.TASK
                      showDialog = true
                    },
                    modifier = Modifier.fillMaxWidth(0.45f).testTag("addTaskButton"),
                    colors = blue) {
                      Text("Add task")
                    }
                Button(
                    onClick = {
                      newElementType = ScheduledType.EVENT
                      showDialog = true
                    },
                    modifier = Modifier.fillMaxWidth(0.82f).testTag("addEventButton"),
                    colors = blue_sky) {
                      Text("Add event")
                    }
              }

          // Buttons to change of week
          Row(
              modifier = Modifier.fillMaxWidth(),
              horizontalArrangement = Arrangement.SpaceBetween) {
                TextButton(
                    onClick = { timeTableViewModel.getPreviousWeek() },
                    modifier = Modifier.testTag("lastWeekButton"),
                    colors = transparentButtonColor(MaterialTheme.colorScheme.primary)) {
                      Icon(Icons.Default.KeyboardDoubleArrowLeft, "left arrow")
                      Text("last week")
                    }

                Text(
                    text = timeTableViewModel.getMonthAndYear(currentWeek),
                    modifier = Modifier.testTag("monthAndYear"),
                    textAlign = TextAlign.Center)

                TextButton(
                    onClick = { timeTableViewModel.getNextWeek() },
                    modifier = Modifier.testTag("nextWeekButton"),
                    colors = transparentButtonColor(MaterialTheme.colorScheme.primary)) {
                      Text("next week")
                      Icon(Icons.Default.KeyboardDoubleArrowRight, "right arrow")
                    }
              }

          // Table
          LazyColumn(modifier = Modifier.fillMaxSize()) {
            items(1) {
              Row(modifier = Modifier.fillMaxWidth().padding(bottom = 2.dp).testTag("days")) {
                Spacer(modifier = Modifier.fillMaxWidth(0.12f).padding(top = 25.dp))
                for (c in weeklyTable.indices) {
                  Text(
                      text = timeTableViewModel.getDateAtDay(c, currentWeek),
                      modifier = Modifier.fillMaxWidth((1.0 / (7 - c)).toFloat()),
                      textAlign = TextAlign.Center)
                }
              }
              Row(modifier = Modifier.fillMaxWidth()) {
                Column(
                    modifier = Modifier.fillMaxWidth(0.12f).padding(top = 25.dp).testTag("hours"),
                    horizontalAlignment = Alignment.End) {
                      for (i in 1..23) {
                        Text(
                            "${i}h",
                            modifier =
                                Modifier.padding(top = 15.dp, bottom = 15.dp, end = 5.dp)
...
@Composable
fun TableColumn(width: Float, content: List<Scheduled>, navigate: (Scheduled) -> Unit) {
  BoxWithConstraints(modifier = Modifier.fillMaxWidth(width).fillMaxHeight()) {
    val boxWidth = maxWidth

    Column(
        modifier = Modifier.fillMaxSize().testTag("tableColumn"),
        horizontalAlignment = Alignment.End) {
          for (i in 0..23) {
            Row(
                modifier =
                    Modifier.border(width = 0.5.dp, color = gray).height(50.dp).fillMaxWidth()) {}
          }
...
  var lengthMin by remember { mutableIntStateOf(0) }
  var addedTodo by remember { mutableStateOf<Todo?>(null) }

  val actualTodos by todoViewModel.actualTodos.collectAsState()

  AlertDialog(
      modifier = Modifier.fillMaxWidth().testTag("dialog"),
      onDismissRequest = { onDismiss() },
      title = {
        if (newElementType == ScheduledType.TASK) {
          Text("Plan to do a task")
        } else {
          Text("Schedule an event")
        }
      },
      text = {
        if (newElementType == ScheduledType.TASK) {
          Column(
              modifier = Modifier.fillMaxWidth().testTag("addTaskDialog"),
              verticalArrangement = Arrangement.spacedBy(8.dp)) {
                Title("Todo")
                LazyColumn(modifier = Modifier.fillMaxWidth().fillMaxHeight(0.25f)) {
                  items(actualTodos.size) { index ->
                    Card(
                        modifier =
...
                      lengthHour = hour
                      lengthMin = min
                    })
              }
        } else {
          Column(
              modifier = Modifier.fillMaxWidth().testTag("addEventDialog"),
              verticalArrangement = Arrangement.spacedBy(8.dp)) {
                Title("Name")
                OutlinedTextField(
                    value = name,
                    modifier = Modifier.fillMaxWidth(0.9f).testTag("nameTextField"),
                    onValueChange = { name = it },
                    placeholder = { Text("Name the event") })
                DateAndTimePickers(
                    context,
                    selectedDate,
                    lengthHour,
...
              name = ""
              selectedDate = Calendar.getInstance()
              lengthHour = 1
              lengthMin = 0
              addedTodo = null
            },
            modifier = Modifier.testTag("confirm"),
            enabled = newElementType == ScheduledType.EVENT || addedTodo != null,
            colors =
                ButtonColors(
                    containerColor = Color.Transparent,
                    contentColor = MaterialTheme.colorScheme.primary,
                    disabledContainerColor = Color.Transparent,
...
              Text("Confirm")
            }
      },
      dismissButton = {
        TextButton(
            onClick = { onDismiss() },
            modifier = Modifier.testTag("cancel"),
            colors = transparentButtonColor(MaterialTheme.colorScheme.primary)) {
              Text("Cancel")
            }
      })
}

...
                },
                year,
                month,
                day)
            .show()
      },
      modifier = Modifier.fillMaxWidth(0.9f).testTag("datePicker"),
      shape = OutlinedTextFieldDefaults.shape) {
        Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceBetween) {
          Text(
              text = SimpleDateFormat("dd-MM-yyyy", Locale.getDefault()).format(selectedDate.time),
              textAlign = TextAlign.Start,
              color = MaterialTheme.colorScheme.primary)
...
                hour,
                minute,
                true // Use 24-hour format
                )
            .show()
      },
      modifier = Modifier.fillMaxWidth(0.9f).testTag("timePicker"),
      shape = OutlinedTextFieldDefaults.shape) {
        Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceBetween) {
          Text(
              text =
                  hourToString(
                      selectedDate.get(Calendar.HOUR_OF_DAY), selectedDate.get(Calendar.MINUTE)),
...
                { _: TimePicker, hourOfDay: Int, minute: Int -> selectTime(hourOfDay, minute) },
                lengthHour,
                lengthMin,
                true)
            .show()
      },
      modifier = Modifier.fillMaxWidth(0.9f).testTag("lengthPicker"),
      shape = OutlinedTextFieldDefaults.shape) {
        Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceBetween) {
          Text(
              text = hourToString(lengthHour, lengthMin),
              textAlign = TextAlign.Start,
              color = MaterialTheme.colorScheme.primary)
...
